--- a/entries/ifc_tracking/index.html
+++ b/entries/ifc_tracking/index.html
@@ -14,7 +14,7 @@ non-terminating executions are allowed to drop a tail of those. A
 very crude approximation of our characterisation is slicing based on
 program dependence graphs, which we use as a minimal example and
 derive a corresponding soundness result. For further details and
-applications refer to the authors upcoming dissertation.</div><a href=http://isa-afp.org/LICENSE>BSD License</a><h3>Topics</h3><ul><li><a href=/topics/computer-science/security>Computer science/Security</a></li></ul></main><nav class=links><a class=popUpButton href=#citePopUp>Cite</a>
+applications refer to the authors upcoming dissertation.</div><a href=http://isa-afp.org/LICENSE>BSD License</a><h3>Theories</h3><ul><li><a href=theories/#IFC>IFC</a></li><li><a href=theories/#PDG>PDG</a></li></ul><h3>Topics</h3><ul><li><a href=/topics/computer-science/security>Computer science/Security</a></li></ul></main><nav class=links><a class=popUpButton href=#citePopUp>Cite</a>
 <a class=popUpButton href=#downloadPopUp>Download</a><h4>PDFs</h4><a href=https://www.isa-afp.org/browser_info/current/AFP/IFC_Tracking/outline.pdf>Proof
 outline</a>
 <a href=https://www.isa-afp.org/browser_info/current/AFP/IFC_Tracking/document.pdf>Proof
